--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
     color: var(--text-color);
     width: 85%;
     margin: 5rem auto;
-    border: 1px solid black;
+    border: 2px solid black;
 }
 
 #top-aside {
@@ -50,7 +50,7 @@ body {
 aside {
     width: 400px;
     height: 100%;
-    border-right: 1px solid black;
+    border-right: 2px solid black;
 }
 
 /* searchbar config */
@@ -87,7 +87,11 @@ aside {
 /* Contact section config */
 #contactContainer {
     background-color: var(--secondary-color);
-    overflow-y: scroll;
+    overflow-y: auto;
+}
+
+.contactItem {
+    margin: 0 1rem;
 }
 
 .date {
