--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,15 @@ i:hover {
     height: 80px;
     background-color: var(--main-color);
 }
+
+.footer-icons {
+    font-size: 1.5rem;
+}
+
+#sendContainer {
+    width: 85%;
+}
+
+#sendMessage {
+    background-color: var(--secondary-color);
+}
