fixed some style and added new chats

--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,8 @@ body {
 .mycontainer {
     color: var(--text-color);
     width: 85%;
-    height: 700px;
-    margin: 1.5rem auto;
+    height: 90vh;
+    margin: 1rem auto;
 }
 
 #top-aside {
